--- a/notebook1_ChristianDavis.ipynb
+++ b/notebook1_ChristianDavis.ipynb
@@ -46,7 +46,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b771a13-e1bc-4924-dce9-8bd302590a7b"
+        "outputId": "cf2ad8fb-ea33-4966-9d6d-fe6b10203bbe"
       },
       "source": [
         "import pandas as pd\n",
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "cd28b513-a364-4df1-c308-32e0473a6084"
+        "outputId": "b37fe210-0b42-4c83-f0d6-d73eea4a1ed7"
       },
       "source": [
         "#import the data:\n",
@@ -103,7 +103,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8ac8779a-a9f9-4b0d-bf0b-50fc31b7eedb\">\n",
+              "  <div id=\"df-3139e05c-7ad8-4907-bc6d-48dd12daba3c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -222,7 +222,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8ac8779a-a9f9-4b0d-bf0b-50fc31b7eedb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3139e05c-7ad8-4907-bc6d-48dd12daba3c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -273,12 +273,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8ac8779a-a9f9-4b0d-bf0b-50fc31b7eedb button.colab-df-convert');\n",
+              "          document.querySelector('#df-3139e05c-7ad8-4907-bc6d-48dd12daba3c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8ac8779a-a9f9-4b0d-bf0b-50fc31b7eedb');\n",
+              "          const element = document.querySelector('#df-3139e05c-7ad8-4907-bc6d-48dd12daba3c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -342,11 +342,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eE_ZrSrQV2_0"
+        "id": "eE_ZrSrQV2_0",
+        "outputId": "6a6069e6-075e-4ad0-deb5-a6c911fa3815",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "poke['Type 1'].unique()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Grass', 'Fire', 'Water', 'Bug', 'Normal', 'Poison', 'Electric',\n",
+              "       'Ground', 'Fairy', 'Fighting', 'Psychic', 'Rock', 'Ghost', 'Ice',\n",
+              "       'Dragon', 'Dark', 'Steel', 'Flying'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -361,11 +380,158 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XFTTrwtTYESB"
+        "id": "XFTTrwtTYESB",
+        "outputId": "4a3ad8be-4ea0-4c71-9ded-5df115438b05",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "fire_flying_pokemon = poke[poke['Type 1'] == 'Fire'][poke['Type 2'] == 'flying']\n",
+        "fire_flying_pokemon.head()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-8-f4f032a8fdfd>:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "  fire_flying_pokemon = poke[poke['Type 1'] == 'Fire'][poke['Type 2'] == 'flying']\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [#, Name, Type 1, Type 2, Total, HP, Attack, Defense, Sp. Atk, Sp. Def, Speed, Generation, Legendary]\n",
+              "Index: []"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-533866f1-a331-4810-b84b-e625c90bb440\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>#</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Type 1</th>\n",
+              "      <th>Type 2</th>\n",
+              "      <th>Total</th>\n",
+              "      <th>HP</th>\n",
+              "      <th>Attack</th>\n",
+              "      <th>Defense</th>\n",
+              "      <th>Sp. Atk</th>\n",
+              "      <th>Sp. Def</th>\n",
+              "      <th>Speed</th>\n",
+              "      <th>Generation</th>\n",
+              "      <th>Legendary</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-533866f1-a331-4810-b84b-e625c90bb440')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-533866f1-a331-4810-b84b-e625c90bb440 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-533866f1-a331-4810-b84b-e625c90bb440');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
