--- a/Day04_kNN.ipynb
+++ b/Day04_kNN.ipynb
@@ -76,11 +76,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "1mKqD9g8a5UE"
+        "id": "1mKqD9g8a5UE",
+        "outputId": "d8f863d2-fa81-4224-e6b9-480ebe412472",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "#run this cell if you're using Colab:\n",
         "from google.colab import drive\n",
@@ -89,24 +101,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ZVWGAAKba5UF",
-        "outputId": "33f15c23-1c34-47b6-80e5-4456cef68efd"
+        "outputId": "4db91055-0a67-4516-a64c-b79271876a91",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 509
+        }
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "/Users/100022114/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3071: DtypeWarning: Columns (70,71,72,73,74,76,79) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-            "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+            "/usr/local/lib/python3.8/dist-packages/IPython/core/interactiveshell.py:3326: DtypeWarning: Columns (70,71,72,73,74,76,79) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "   barrels08  barrelsA08  charge120  charge240  city08  city08U  cityA08  \\\n",
+              "0  15.695714         0.0        0.0        0.0      19      0.0        0   \n",
+              "1  29.964545         0.0        0.0        0.0       9      0.0        0   \n",
+              "2  12.207778         0.0        0.0        0.0      23      0.0        0   \n",
+              "3  29.964545         0.0        0.0        0.0      10      0.0        0   \n",
+              "4  17.347895         0.0        0.0        0.0      17      0.0        0   \n",
+              "\n",
+              "   cityA08U  cityCD  cityE  ...  mfrCode  c240Dscr  charge240b  c240bDscr  \\\n",
+              "0       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
+              "1       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
+              "2       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
+              "3       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
+              "4       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
+              "\n",
+              "                      createdOn                    modifiedOn  startStop  \\\n",
+              "0  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
+              "1  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
+              "2  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
+              "3  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
+              "4  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
+              "\n",
+              "   phevCity  phevHwy  phevComb  \n",
+              "0         0        0         0  \n",
+              "1         0        0         0  \n",
+              "2         0        0         0  \n",
+              "3         0        0         0  \n",
+              "4         0        0         0  \n",
+              "\n",
+              "[5 rows x 83 columns]"
+            ],
             "text/html": [
-              "<div>\n",
+              "\n",
+              "  <div id=\"df-258f3206-f700-4cb1-ab0c-daa99ce248ab\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -271,57 +322,101 @@
               "  </tbody>\n",
               "</table>\n",
               "<p>5 rows × 83 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   barrels08  barrelsA08  charge120  charge240  city08  city08U  cityA08  \\\n",
-              "0  15.695714         0.0        0.0        0.0      19      0.0        0   \n",
-              "1  29.964545         0.0        0.0        0.0       9      0.0        0   \n",
-              "2  12.207778         0.0        0.0        0.0      23      0.0        0   \n",
-              "3  29.964545         0.0        0.0        0.0      10      0.0        0   \n",
-              "4  17.347895         0.0        0.0        0.0      17      0.0        0   \n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-258f3206-f700-4cb1-ab0c-daa99ce248ab')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
               "\n",
-              "   cityA08U  cityCD  cityE  ...  mfrCode  c240Dscr  charge240b  c240bDscr  \\\n",
-              "0       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
-              "1       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
-              "2       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
-              "3       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
-              "4       0.0     0.0    0.0  ...      NaN       NaN         0.0        NaN   \n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
               "\n",
-              "                      createdOn                    modifiedOn  startStop  \\\n",
-              "0  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
-              "1  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
-              "2  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
-              "3  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
-              "4  Tue Jan 01 00:00:00 EST 2013  Tue Jan 01 00:00:00 EST 2013        NaN   \n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
               "\n",
-              "   phevCity  phevHwy  phevComb  \n",
-              "0         0        0         0  \n",
-              "1         0        0         0  \n",
-              "2         0        0         0  \n",
-              "3         0        0         0  \n",
-              "4         0        0         0  \n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
               "\n",
-              "[5 rows x 83 columns]"
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-258f3206-f700-4cb1-ab0c-daa99ce248ab button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-258f3206-f700-4cb1-ab0c-daa99ce248ab');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
         "#import the data:\n",
         "#make sure the path on the line below corresponds to the path where you put your dataset.\n",
         "import pandas as pd\n",
-        "path1 = 'datasets/titanic.csv' #'/content/drive/MyDrive/CS167/datasets/titanic.csv'\n",
+        "path1 = '/content/drive/MyDrive/datasets/titanic.csv' #'/content/drive/MyDrive/datasets/titanic.csv'\n",
         "titanic = pd.read_csv(path1) \n",
         "\n",
-        "path2 = 'datasets/irisData.csv' #'/content/drive/MyDrive/CS167/datasets/iris.csv'\n",
+        "path2 = '/content/drive/MyDrive/datasets/irisData.csv' #'/content/drive/MyDrive/datasets/iris.csv'\n",
         "iris= pd.read_csv(path2)\n",
         "iris.head()\n",
         "\n",
-        "path3 = 'datasets/vehicles.csv' #'/content/drive/MyDrive/CS167/datasets/vehicles.csv'\n",
+        "path3 = '/content/drive/MyDrive/datasets/vehicles.csv' #'/content/drive/MyDrive/datasets/vehicles.csv'\n",
         "vehicles= pd.read_csv(path3)\n",
         "vehicles.head()"
       ]
@@ -341,26 +436,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "IvwunlUba5UH",
-        "outputId": "97ad970e-aa8c-4664-ef08-9c83e108dbeb"
+        "outputId": "c5ffe2c3-ab41-4fd9-b55a-ec7d2fb4c172",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "80.0"
+              "30.0"
             ]
           },
-          "execution_count": 14,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 20
         }
       ],
       "source": [
         "#find the deck of the passenger who was the oldest on the titanic\n",
-        "titanic.age.max()"
+        "titanic.age.max()\n",
+        "\n",
+        "subset = titanic[titanic.age == 80.0]\n",
+        "\n",
+        "sorted_titanic = titanic.sort_values(['age'], ascending=False)\n",
+        "sorted_titanic.iloc[0]\n",
+        "\n",
+        "sorted_titanic.fare.iloc[0]\n",
+        "\n",
+        "titanic.loc[titanic.age.idxmax()].fare"
       ]
     },
     {
@@ -838,6 +945,23 @@
         "\n",
         "### What would the 1-NN version predict? 2-NN? 3-NN? 4-NN?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.74\n",
+        "1.1\n",
+        "1.23\n",
+        ".97\n",
+        "\n",
+        "1-NN - Iris-Virginica\n",
+        "2-NN - Iris-Virginica\n",
+        "3-NN - Iris-Virginica\n",
+        "4-NN - Iris-Virginica"
+      ],
+      "metadata": {
+        "id": "gccJ5dqOVDhi"
+      }
     },
     {
       "cell_type": "markdown",
