--- a/Notebook2_starter.ipynb
+++ b/Notebook2_starter.ipynb
@@ -50,7 +50,7 @@
           "height": 532
         },
         "id": "b49CLo7pXyXm",
-        "outputId": "07f3fce3-a04d-4d66-d809-8100c78ea694"
+        "outputId": "89a7daee-f861-4e61-cdcf-546f857dacb6"
       },
       "source": [
         "import pandas\n",
@@ -61,13 +61,13 @@
         "pandas.set_option('display.max_columns', 100)\n",
         "data.head()"
       ],
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         },
         {
@@ -175,7 +175,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-213891e2-a17a-4730-96c6-ddb2bc8e9f35\">\n",
+              "  <div id=\"df-de4fd256-375f-4577-b957-ca7e1b9aa145\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -714,7 +714,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-213891e2-a17a-4730-96c6-ddb2bc8e9f35')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de4fd256-375f-4577-b957-ca7e1b9aa145')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -765,12 +765,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-213891e2-a17a-4730-96c6-ddb2bc8e9f35 button.colab-df-convert');\n",
+              "          document.querySelector('#df-de4fd256-375f-4577-b957-ca7e1b9aa145 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-213891e2-a17a-4730-96c6-ddb2bc8e9f35');\n",
+              "          const element = document.querySelector('#df-de4fd256-375f-4577-b957-ca7e1b9aa145');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -793,7 +793,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 1
         }
       ]
     },
@@ -820,7 +820,7 @@
         "# your code here:\n",
         "right_subset = data[data['fuelType'] == 'Regular'][['displ','cylinders','year','comb08']]\n"
       ],
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -849,7 +849,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "8e6839d7-eed4-45c5-b866-8ccbd1bfad3f"
+        "outputId": "ab5c23e3-88b3-4d19-c6a3-bb6b715a3f7e"
       },
       "source": [
         "# remove missing data here\n",
@@ -871,7 +871,7 @@
         "\n",
         "right_subset.head()"
       ],
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +886,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-95279e5b-e1c5-499f-9e08-727640240425\">\n",
+              "  <div id=\"df-485069e9-61e2-406f-88c1-ba692e008ef7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -951,7 +951,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95279e5b-e1c5-499f-9e08-727640240425')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-485069e9-61e2-406f-88c1-ba692e008ef7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1002,12 +1002,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-95279e5b-e1c5-499f-9e08-727640240425 button.colab-df-convert');\n",
+              "          document.querySelector('#df-485069e9-61e2-406f-88c1-ba692e008ef7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-95279e5b-e1c5-499f-9e08-727640240425');\n",
+              "          const element = document.querySelector('#df-485069e9-61e2-406f-88c1-ba692e008ef7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1030,7 +1030,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 3
         }
       ]
     },
@@ -1078,11 +1078,11 @@
         "    sorted_data = data_copy.sort_values(['distance_to_new'])\n",
         "    \n",
         "    # 3. predict\n",
-        "    prediction = sorted_data.iloc[0:k]['comb08'].median()\n",
+        "    prediction = sorted_data.iloc[0:k]['comb08'].mean()\n",
         "\n",
         "    return prediction\n"
       ],
-      "execution_count": 47,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1102,7 +1102,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db485f5b-59bf-43eb-f0c1-2ba132feed54"
+        "outputId": "36a1a6f4-6088-4015-f27e-58354c0c961f"
       },
       "source": [
         "chevy = {}\n",
@@ -1112,7 +1112,7 @@
         "\n",
         "kNN(chevy, right_subset, 9)\n"
       ],
-      "execution_count": 48,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1122,7 +1122,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 31
         }
       ]
     },
@@ -1139,13 +1139,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2C4Mmg2TcKKx"
+        "id": "2C4Mmg2TcKKx",
+        "outputId": "5448cc96-256a-4197-fc83-8bd003e9f732",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# normalize a copy of the data\n"
+        "# normalize a copy of the data\n",
+        "def normalized_knn(new, data, k):\n",
+        "  data_copy = data.copy()\n",
+        "  normalized = data_copy.copy()\n",
+        "\n",
+        "  data_copy['distance_to_new'] = np.sqrt(\n",
+        "    (new['displ'] - data['displ'])**2 \n",
+        "    +(new['cylinders'] - data['cylinders'])**2 \n",
+        "    +(new['year'] - data['year'])**2)\n",
+        "  \n",
+        "  for col in ['displ','cylinders','year']:\n",
+        "    s_mean = data[col].mean()\n",
+        "    s_std = data[col].std()\n",
+        "    normalized[col] = (data[col] - s_mean)/s_std\n",
+        "  \n",
+        "  data_copy.sort_values(['distance_to_new'], inplace=True)\n",
+        "  neighbors = data.iloc[0:k]\n",
+        "  \n",
+        "  results = neighbors['comb08'].mean()\n",
+        "\n",
+        "  return results\n",
+        "\n",
+        "normalized_data = normalized_knn(chevy, right_subset, 9)\n",
+        "normalized_data\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21.333333333333332"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The non normalized function predicted 20 as the MPG where the normalized function predicted 21.33. This is because the normalized data brought all the variables to the same importance level which changed the nearest neighbors. "
+      ],
+      "metadata": {
+        "id": "7HcuCkkmPSfL"
+      }
     }
   ]
 }
