--- a/Notebook4_Davis.ipynb
+++ b/Notebook4_Davis.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fWJ8-XD8OzPx",
-        "outputId": "10e8d4d3-15e3-4a16-87c2-7c61250ad258",
+        "outputId": "5b3a0ba7-b703-450e-b2cb-7029d18b804a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
@@ -70,10 +70,10 @@
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "songs = pandas.read_csv('/content/drive/MyDrive/CS167/datasets/spotify.csv') # change this to match your dataset directory\n",
+        "songs = pandas.read_csv('/content/drive/MyDrive/datasets/spotify.csv') # change this to match your dataset directory\n",
         "songs.head()"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.8/dist-packages/IPython/core/interactiveshell.py:3326: DtypeWarning: Columns (19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "/usr/local/lib/python3.9/dist-packages/IPython/core/interactiveshell.py:3326: DtypeWarning: Columns (19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
             "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
           ]
         },
@@ -147,7 +147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-df540bc5-cd98-424e-be79-d3661350c399\">\n",
+              "  <div id=\"df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -315,7 +315,7 @@
               "</table>\n",
               "<p>5 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df540bc5-cd98-424e-be79-d3661350c399')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -366,12 +366,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-df540bc5-cd98-424e-be79-d3661350c399 button.colab-df-convert');\n",
+              "          document.querySelector('#df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-df540bc5-cd98-424e-be79-d3661350c399');\n",
+              "          const element = document.querySelector('#df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -394,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 19
         }
       ]
     },
@@ -402,7 +402,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "exaUcSQxI5FU",
-        "outputId": "9d345fda-7a55-4896-8dc6-f1b4484d6121",
+        "outputId": "02ee8b10-1864-4f4a-c5a2-7e3ec81d4b74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -417,7 +417,7 @@
         "train_data, test_data, train_sln, test_sln = train_test_split(songs[predictors], songs[target], test_size = 0.2, random_state=41)\n",
         "train_data.head()"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +439,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-74fe5159-15e7-4c55-baf9-a16841953e34\">\n",
+              "  <div id=\"df-2edcdf2e-dd64-414c-9869-10ad4cbf5422\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +540,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-74fe5159-15e7-4c55-baf9-a16841953e34')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2edcdf2e-dd64-414c-9869-10ad4cbf5422')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +591,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-74fe5159-15e7-4c55-baf9-a16841953e34 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2edcdf2e-dd64-414c-9869-10ad4cbf5422 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-74fe5159-15e7-4c55-baf9-a16841953e34');\n",
+              "          const element = document.querySelector('#df-2edcdf2e-dd64-414c-9869-10ad4cbf5422');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -619,7 +619,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 20
         }
       ]
     },
@@ -630,62 +630,124 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c166290a-c6f2-4eb0-d5b8-98cd147f49e6"
+        "outputId": "62dd0492-bd43-4faf-beaf-6896b3aec566"
       },
       "source": [
-        "# w-kNN with small k\n"
+        "# w-kNN with small kwnn\n",
+        "kwnn = neighbors.KNeighborsRegressor(weights='distance')\n",
+        "kwnn.fit(train_data, train_sln)\n",
+        "preds = kwnn.predict(test_data)\n",
+        "metrics.mean_squared_error(test_sln, preds)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-1.6624706117604808"
+              "0.020534714145327582"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 25
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o1q07BzTOjnE"
+        "id": "o1q07BzTOjnE",
+        "outputId": "ff57a691-3302-470d-b4bc-65ad9ece81e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# w-kNN with large k\n"
+        "# w-kNN with large k\n",
+        "kwnn = neighbors.KNeighborsRegressor(n_neighbors = 50,weights='distance')\n",
+        "kwnn.fit(train_data, train_sln)\n",
+        "preds = kwnn.predict(test_data)\n",
+        "metrics.mean_squared_error(test_sln, preds)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.017110562462016247"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S5kncBKlOrhc"
+        "id": "S5kncBKlOrhc",
+        "outputId": "ff92ff2a-ad48-4571-f2ee-3b1096128839",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# decision tree with default paramters\n"
+        "# decision tree with default paramters\n",
+        "dt = tree.DecisionTreeRegressor()\n",
+        "dt.fit(train_data, train_sln)\n",
+        "preds = dt.predict(test_data)\n",
+        "metrics.mean_squared_error(test_sln, preds)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.01699025690816688"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7QDjUeiyOt53"
+        "id": "7QDjUeiyOt53",
+        "outputId": "8530a613-a4c8-4aa4-8492-76631d636615",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# decision tree with some kind of parameter that (hopefully) results in a smaller tree\n"
+        "# decision tree with some kind of parameter that (hopefully) results in a smaller tree\n",
+        "dt = tree.DecisionTreeRegressor(max_depth = 4)\n",
+        "dt.fit(train_data, train_sln)\n",
+        "preds = dt.predict(test_data)\n",
+        "metrics.mean_squared_error(test_sln, preds)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.01579057954313745"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Random Forest with default parameters\n"
+        "# Random Forest with default parameters\n",
+        "  "
       ],
       "metadata": {
         "id": "94c7_lokK7Dg"
