--- a/Notebook4_Davis.ipynb
+++ b/Notebook4_Davis.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fWJ8-XD8OzPx",
-        "outputId": "5b3a0ba7-b703-450e-b2cb-7029d18b804a",
+        "outputId": "a88759dd-fcf7-4414-d2ba-06b284bacefb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
@@ -73,7 +73,7 @@
         "songs = pandas.read_csv('/content/drive/MyDrive/datasets/spotify.csv') # change this to match your dataset directory\n",
         "songs.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9\">\n",
+              "  <div id=\"df-7a70d060-b435-4edb-aa57-a02e344b9ec4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -315,7 +315,7 @@
               "</table>\n",
               "<p>5 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7a70d060-b435-4edb-aa57-a02e344b9ec4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -366,12 +366,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7a70d060-b435-4edb-aa57-a02e344b9ec4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-62e5f95b-85c8-4431-b6a2-e717c47e9fb9');\n",
+              "          const element = document.querySelector('#df-7a70d060-b435-4edb-aa57-a02e344b9ec4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -394,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 33
         }
       ]
     },
@@ -402,7 +402,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "exaUcSQxI5FU",
-        "outputId": "02ee8b10-1864-4f4a-c5a2-7e3ec81d4b74",
+        "outputId": "722c303f-c5c5-473b-e327-0839bd936346",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -417,7 +417,7 @@
         "train_data, test_data, train_sln, test_sln = train_test_split(songs[predictors], songs[target], test_size = 0.2, random_state=41)\n",
         "train_data.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +439,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2edcdf2e-dd64-414c-9869-10ad4cbf5422\">\n",
+              "  <div id=\"df-609e0ef5-07a1-4d86-aa91-4d81e0c9085f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +540,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2edcdf2e-dd64-414c-9869-10ad4cbf5422')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-609e0ef5-07a1-4d86-aa91-4d81e0c9085f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +591,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2edcdf2e-dd64-414c-9869-10ad4cbf5422 button.colab-df-convert');\n",
+              "          document.querySelector('#df-609e0ef5-07a1-4d86-aa91-4d81e0c9085f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2edcdf2e-dd64-414c-9869-10ad4cbf5422');\n",
+              "          const element = document.querySelector('#df-609e0ef5-07a1-4d86-aa91-4d81e0c9085f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -619,7 +619,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 34
         }
       ]
     },
@@ -639,7 +639,7 @@
         "preds = kwnn.predict(test_data)\n",
         "metrics.mean_squared_error(test_sln, preds)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
         "preds = kwnn.predict(test_data)\n",
         "metrics.mean_squared_error(test_sln, preds)\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
         "preds = dt.predict(test_data)\n",
         "metrics.mean_squared_error(test_sln, preds)\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +729,7 @@
         "preds = dt.predict(test_data)\n",
         "metrics.mean_squared_error(test_sln, preds)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,24 +747,62 @@
       "cell_type": "code",
       "source": [
         "# Random Forest with default parameters\n",
-        "  "
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "df = RandomForestRegressor()\n",
+        "df.fit(train_data, train_sln)\n",
+        "preds = df.predict(test_data)\n",
+        "metrics.mean_squared_error(test_sln, preds)"
       ],
       "metadata": {
-        "id": "94c7_lokK7Dg"
+        "id": "94c7_lokK7Dg",
+        "outputId": "44d7c52b-92ba-4a1b-fa24-386ec28eb419",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.008679451442119724"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Random Forest with change to the number of trees\n"
+        "# Random Forest with change to the number of trees\n",
+        "df = RandomForestRegressor(n_estimators = 50)\n",
+        "df.fit(train_data, train_sln)\n",
+        "preds = df.predict(test_data)\n",
+        "metrics.mean_squared_error(test_sln, preds)"
       ],
       "metadata": {
-        "id": "OCPBb2teLAQm"
+        "id": "OCPBb2teLAQm",
+        "outputId": "32728143-129b-4883-fafc-20348b6be300",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.008784438125355395"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "markdown",
