--- a/Notebook4_Davis.ipynb
+++ b/Notebook4_Davis.ipynb
@@ -630,26 +630,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62dd0492-bd43-4faf-beaf-6896b3aec566"
+        "outputId": "7e3c0f11-3953-43ee-8bcb-ec667fde0582"
       },
       "source": [
         "# w-kNN with small kwnn\n",
-        "kwnn = neighbors.KNeighborsRegressor(weights='distance')\n",
+        "kwnn = neighbors.KNeighborsRegressor()\n",
         "kwnn.fit(train_data, train_sln)\n",
         "preds = kwnn.predict(test_data)\n",
         "metrics.mean_squared_error(test_sln, preds)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.020534714145327582"
+              "0.02391456930589765"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 10
         }
       ]
     },
@@ -657,29 +657,29 @@
       "cell_type": "code",
       "metadata": {
         "id": "o1q07BzTOjnE",
-        "outputId": "ff57a691-3302-470d-b4bc-65ad9ece81e3",
+        "outputId": "0e4f59e3-bb33-4d29-aec0-b85615d98a1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "# w-kNN with large k\n",
-        "kwnn = neighbors.KNeighborsRegressor(n_neighbors = 50,weights='distance')\n",
+        "kwnn = neighbors.KNeighborsRegressor(n_neighbors = 50)\n",
         "kwnn.fit(train_data, train_sln)\n",
         "preds = kwnn.predict(test_data)\n",
         "metrics.mean_squared_error(test_sln, preds)\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.017110562462016247"
+              "0.023336096144801796"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 11
         }
       ]
     },
@@ -755,10 +755,10 @@
       ],
       "metadata": {
         "id": "94c7_lokK7Dg",
-        "outputId": "44d7c52b-92ba-4a1b-fa24-386ec28eb419",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "44d7c52b-92ba-4a1b-fa24-386ec28eb419"
       },
       "execution_count": 39,
       "outputs": [
@@ -785,10 +785,10 @@
       ],
       "metadata": {
         "id": "OCPBb2teLAQm",
-        "outputId": "32728143-129b-4883-fafc-20348b6be300",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32728143-129b-4883-fafc-20348b6be300"
       },
       "execution_count": 40,
       "outputs": [
@@ -817,16 +817,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y1-4z4VHOxBt"
+        "id": "Y1-4z4VHOxBt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34d96640-6fbf-47e6-f05d-fad56aacb068"
       },
       "source": [
         "# normalize the data\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "\n",
+        "scaler = StandardScaler()\n",
         "\n",
-        "# run a w-knn\n"
+        "scaler.fit(train_data)\n",
+        "train_data_normalized = scaler.transform(train_data)\n",
+        "test_data_normalized = scaler.transform(test_data)\n",
+        "\n",
+        "# run a w-knn\n",
+        "\n",
+        "kwnn = neighbors.KNeighborsRegressor(weights='distance')\n",
+        "kwnn.fit(train_data_normalized, train_sln)\n",
+        "preds = kwnn.predict(test_data_normalized)\n",
+        "metrics.mean_squared_error(test_sln, preds)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.010799803875716904"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -839,6 +865,17 @@
         "* What algorithm performed better? w-kNN, Decision Trees, or Random Forests? Why do you think this was the case?\n",
         "* What effect did normalizing the data have on your results? Explain. "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random forests performed the best. I think this is because it has the advantage of taking the average of many regressor algorithms. If you perform more functions you should be able to come to a better outcome. \n",
+        "\n",
+        "Normalizing took the MSE from .02 to .01 effectively doubling the effectiveness of the knn function. Because the data is normalized it is not thrown off by the difference in size in the data. "
+      ],
+      "metadata": {
+        "id": "zPwtU3aQ8UfN"
+      }
     },
     {
       "cell_type": "code",
