--- a/Notebook5_Davis.ipynb
+++ b/Notebook5_Davis.ipynb
@@ -51,10 +51,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 335
+          "height": 334
         },
         "id": "R65ec-xVAAQO",
-        "outputId": "8380cbe1-e542-45a7-82f1-92c2523711cb"
+        "outputId": "fc17d20d-d0f7-46b6-846c-d3064b540d9f"
       },
       "source": [
         "from google.colab import drive\n",
@@ -115,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-04dcf978-2bef-4118-a72d-fd0f88270a6a\">\n",
+              "  <div id=\"df-be450366-1ead-4a84-9511-98658a1243a4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -283,7 +283,7 @@
               "</table>\n",
               "<p>5 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-04dcf978-2bef-4118-a72d-fd0f88270a6a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-be450366-1ead-4a84-9511-98658a1243a4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -334,12 +334,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-04dcf978-2bef-4118-a72d-fd0f88270a6a button.colab-df-convert');\n",
+              "          document.querySelector('#df-be450366-1ead-4a84-9511-98658a1243a4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-04dcf978-2bef-4118-a72d-fd0f88270a6a');\n",
+              "          const element = document.querySelector('#df-be450366-1ead-4a84-9511-98658a1243a4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -384,9 +384,9 @@
         "id": "eoJSa02TAW0k",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 448
+          "height": 447
         },
-        "outputId": "2e3ea9ef-9374-4d72-e4b1-e3b8c516e4e2"
+        "outputId": "dd13f4a4-4e5b-4656-a593-3dab4bccc036"
       },
       "source": [
         "\n",
@@ -482,7 +482,7 @@
         "conf_mat = metrics.confusion_matrix(test_sln, predictions, labels=vals)\n",
         "print(pd.DataFrame(conf_mat, index = \"T \" + vals, columns = \"Pred \" + vals))\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
         "conf_mat = metrics.confusion_matrix(test_sln, predictions, labels=vals)\n",
         "print(pd.DataFrame(conf_mat, index = \"T \" + vals, columns = \"Pred \" + vals))\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "#output accuracy\n",
         "print(\"Prediction accuracy:\", metrics.accuracy_score(test_sln, cancer_perc_predictions))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +598,7 @@
         "#output accuracy\n",
         "print(\"Prediction accuracy:\", metrics.accuracy_score(test_sln, cancer_perc_predictions))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,24 +623,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JcphcrAGBWFQ"
+        "id": "JcphcrAGBWFQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab0b7d27-2399-4167-b807-745a8fdfdf32"
       },
       "source": [
-        "#Default SGD\n"
+        "#Default SGD\n",
+        "from sklearn.linear_model import SGDClassifier\n",
+        "scaler = StandardScaler()\n",
+        "\n",
+        "scaler.fit(train_data)\n",
+        "train_data_normalized = scaler.transform(train_data)\n",
+        "test_data_normalized = scaler.transform(test_data)\n",
+        "\n",
+        "cancer_sgd = SGDClassifier()\n",
+        "cancer_sgd.fit(train_data_normalized,train_sln)\n",
+        "\n",
+        "cancer_preds = cancer_sgd.predict(test_data_normalized)\n",
+        "\n",
+        "print(\"Prediction accuracy:\", metrics.accuracy_score(test_sln, cancer_preds))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction accuracy: 0.9649122807017544\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b0QkV9YaBYBK"
+        "id": "b0QkV9YaBYBK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c52aa9d1-3229-484c-fd2e-582a693c93ee"
       },
       "source": [
-        "#Tuned SGD"
+        "#Tuned SGD\n",
+        "cancer_sgd = SGDClassifier(loss='hinge',penalty='l1')\n",
+        "cancer_sgd.fit(train_data_normalized,train_sln)\n",
+        "\n",
+        "cancer_preds = cancer_sgd.predict(test_data_normalized)\n",
+        "\n",
+        "print(\"Prediction accuracy:\", metrics.accuracy_score(test_sln, cancer_preds))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction accuracy: 0.9912280701754386\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -654,16 +697,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gZ30YXm8Bnnq"
+        "id": "gZ30YXm8Bnnq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3055e112-55f3-4936-e592-c0365055d1e1"
       },
       "source": [
         "# reduce the dimensionality of your data by using a PCA with n_components = 3\n",
+        "from sklearn.decomposition import PCA\n",
+        "extractor = PCA(n_components=3)\n",
+        "extractor.fit(train_data)  \n",
+        "train_transform = extractor.transform(train_data)\n",
+        "test_transform = extractor.transform(test_data)\n",
         "\n",
         "\n",
-        "# use this smaller dataset and run the model that performed the best from above \n"
+        "\n",
+        "# use this smaller dataset and run the model that performed the best from above \n",
+        "clf = SVC(kernel = 'linear')\n",
+        "clf.fit(train_transform,train_sln)\n",
+        "predictions = clf.predict(test_transform)\n",
+        "\n",
+        "#output accuracy\n",
+        "print(\"accuracy:\", metrics.accuracy_score(test_sln, predictions))\n",
+        "vals = data[target].unique() ## possible classification values\n",
+        "conf_mat = metrics.confusion_matrix(test_sln, predictions, labels=vals)\n",
+        "print(pd.DataFrame(conf_mat, index = \"T \" + vals, columns = \"Pred \" + vals))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy: 0.9824561403508771\n",
+            "     Pred M  Pred B\n",
+            "T M      40       0\n",
+            "T B       2      72\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -673,7 +746,9 @@
       "source": [
         "## Conclusions:\n",
         "a. Which model performed the best? Why do you think this model performed the best? \\\\\n",
-        "b. What effect did the principal component analysis have on the accuracy of your best model? Why do you think this is the case?"
+        "for me it was the support vector machine. If i had to guess I'd say it did best because it was able to find a line the best separates the two outcomes. \\\\\n",
+        "b. What effect did the principal component analysis have on the accuracy of your best model? Why do you think this is the case? \\\\\n",
+        "PCA reduced my accuracy by one percent, which is pretty good. By reducing the dimensionality of the data we expect a worse outcome but with much less computing power required. Because of this i would say the PCA was a success. "
       ]
     }
   ]
